# web-playground

./: README.md
elm-ui/: README.md
elm-ui/src/: Main.elm
haskell-web/: haskell-web.cabal
haskell-web/app/: Main.hs
haskell-web/src/: HaskellWeb.hs
haskell-web/src/HaskellWeb/: Auth.hs  Types.hs
purescript-ui/: .gitignore  README.md  index.html  spago.dhall
purescript-ui/src/: Main.purs  Menu.purs
reasonreact-hooks/: .gitignore  README.md  bsconfig.json  package.json
reasonreact-hooks/src/: App.re  LocalCounter.re  SimpleTree.re  index.html
reasonreact-hooks/src/Hooks/: Auth.re  Infos.re  RenderCount.re
reasonreact-ui/: .gitignore  README.md  bsconfig.json  index.html  indexProduction.html  package.json
reasonreact-ui/src/: App.re  Button.re  Cli.re  Index.re  Info.re  Menu.re  SimpleModal.re  index.html
reasonreact-ui/src/Patternfly/: AboutModal.re  TextContent.re  TextList.re  TextListItem.re
rescript-ui/: .gitignore  README.md  index.html
