cabal-version:       2.4
name:                haskell-web
version:             0.0.0.0
license:             Apache-2.0
license-file:        ../LICENSE
author:              Tristan Cacqueray
maintainer:          Tristan Cacqueray <tdecacqu@redhat.com>
build-type:          Simple
extra-doc-files:     README.md

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , aeson
                     , http-types
                     , jwt
                     , scotty
                     , text
                     , wai-cors

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellWeb
                     , HaskellWeb.Auth
                     , HaskellWeb.Types

executable haskell-web
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskell-web
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite haskell-web-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       haskell-web
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
